# lemmy-stats-crawler

./: .gitignore  .woodpecker.yml  Cargo.toml  README.md  renovate.json
src/: aggregate.rs  crawl.rs  defaults.rs  federated_instances.rs  lib.rs  main.rs  node_info.rs  structs.rs
