[package]
name = "lemmy-stats-crawler"
version = "0.1.0"
authors = ["Felix Ableitner"]
edition = "2018"

[profile.release]
strip = "symbols"
debug = 0
lto = "thin"

[profile.dev]
strip = "symbols"
debug = 0

[dependencies]
lemmy_api_common = { git = "https://github.com/LemmyNet/lemmy.git", branch = "no-skip-serializing" }
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.107"
semver = "1.0.19"
once_cell = "1.18.0"
log = "0.4.20"
derive-new = "0.5.9"
stderrlog = "0.5.4"
clap = { version = "4.4", features = ["derive"] }
regex = "1.9.6"
