[package]
name = "lemmy-stats-crawler"
version = "0.1.0"
authors = ["Felix Ableitner"]
edition = "2018"

[profile.release]
strip = "symbols"
debug = 0
lto = "thin"

[profile.dev]
strip = "symbols"
debug = 0

[dependencies]
lemmy_api_common_v019 = { package = "lemmy_api_common", git = "https://github.com/LemmyNet/lemmy.git", tag = "0.19.0-rc.12" }
reqwest = { version = "0.11.23", default-features = false, features = [
  "json",
  "rustls-tls",
] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.76"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.108"
semver = "1.0.20"
once_cell = "1.19.0"
log = "0.4.20"
derive-new = "0.6.0"
stderrlog = "0.6.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10.2"
