[package]
name = "lemmy-stats-crawler"
version = "0.1.0"
authors = ["Felix Ableitner"]
edition = "2024"

[profile.release]
strip = "symbols"
debug = 0
lto = "thin"

[profile.dev]
strip = "symbols"
debug = 0

[dependencies]
# Avoid upgrading this dependency, otherwise older instances cannot be crawled as 
# API becomes incompatible
lemmy_api_common_v019 = { package = "lemmy_api_common", version = "=0.19.5" }
reqwest = { version = "0.13.1", default-features = false, features = [
  "json",
  "rustls",
] }
reqwest-middleware = "0.5.0"
reqwest-retry = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.149"
semver = "1.0.27"
once_cell = "1.21.3"
log = "0.4.29"
derive-new = "0.7.0"
stderrlog = "0.6.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.12.2"
maxminddb = "0.27"
flate2 = "1.1"
chrono = "0.4.43"
